# cross2B-Pro

./: .claude-code-harness-version  .dockerignore  .env.example  .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  HANDOVER.md  Plans-step11-deadlock-fix.md  Plans.md  Plans1.md  Plans2.md  Plans3.md  Plans4-Frontend.md  Plans4.md  Plans5-LLM.md  Plans5.md  Plans6-DB.md  Plans7.md  README.md  STRUCTURE.json  TEST.md  alembic.ini  backup_before_e2e.sql  docker-compose.override.yml  docker-compose.yml  fe_be_inconsistencies.json  langgraph.json  lefthook.yml  package.json  pyproject.toml  security_vulnerabilities_report.json  start.sh  test_steps_demo.py  tooling-config-export.json  想定挙動.md  改善案_final.md
.claude/: CLAUDE.md  settings.json
.claude-making/: ASSET_CLASSIFICATION.md  DESIGN_PHILOSOPHY.md  README.md  claude-configuration-overview.md  options.json  options.schema.json  setup-project.md
.claude-making/blueprint/: CLAUDE.md.template
.claude-making/plan/: 00-overview.md  01-project-analysis.md  02-structure-setup.md  03-template-copy.md  04-blueprint-customize.md  05-validation.md
.claude/agents/: architect.md  backend-implementer.md  codex-reviewer.md  frontend-implementer.md  prompt-engineer.md  security-reviewer.md  temporal-debugger.md
.claude/rules/: git-worktree.md  implementation.md  workflow-contract.md
.codex/: README.md  auth.json  config.toml  env.sh  instructions.md  version.json
.codex/sessions/: error-logging-adaptation-spec.md
.githooks/: commit-msg  commit-msg.old  post-checkout  post-merge  pre-commit  pre-commit.old  pre-push  pre-push.old  prepare-commit-msg
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
.lefthook/: check-protected-branch.sh  check-secrets.sh  commit-msg.sh  prepare-commit-msg.sh
agda-proof/: Commutativity.agda  DimensionAnalysis.agda  README.md
apps/: __init__.py
apps/api/: __init__.py  constants.py  main.py
apps/ui/: .gitignore  biome.json  next.config.js  package-lock.json  package.json  tailwind.config.js
apps/worker/: __init__.py  main.py
blog.System_prompts/: CHANGELOG.md  MASTER_SPEC.md  OPERATION_GUIDE.md
blog.System_prompts/工程0_キーワード選定/: conversation_starter.txt  instructions.txt  templates.json  unified_knowledge.json
blog.System_prompts/工程1.5_関連キーワード上位サイト競合本文抽出/: instructions.txt  (+2 more)
docker/: Dockerfile.api  Dockerfile.ui  Dockerfile.worker
docs/: README.md  api-settings-setup.md  claude-configuration-overview.md  design-document.md  github-integration.md  hearing-templates.md
evaluation/: プロンプト改善ガイド.md  品質比較レポート_v3.md  測定手法と改善策.md
langgraph-example/: .gitignore  README.md
migration/: README.md  db_dump.sql
prompts/: 01_gemini.md  08_frontend.md
result/: PHASE2_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  phase1_test_output.txt
scripts/: clone_run_for_testing.sh  google_ads_auth.py  init-claude-structure.sh  init-database.sh  init-db.sql  reset.sh  schema.sql  seed.sql  setup-githooks.sh  stop.sh  test_all_endpoints.py  test_article_image_gen.py  test_step11.py  worktree.sh
tests/: conftest.py
仕様書/: PARALLEL_DEV_GUIDE.md  Plans.md  Plans2-quality-evaluation.md  Plans2-tooling-setup.md  REVIEW_FIX_SPEC.md  ROADMAP.md  tooling-config-export.json  workflow.md
納品用_documents/: CLAUDE_SETUP.md  README.md
納品用_scripts/: bootstrap.sh  check-env.sh  google_ads_auth.py  init-db.sql  schema.sql  seed.sql
(+2057 files in other folders)
