[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-article-generator"
version = "0.1.0"
description = "SEO記事自動生成システム"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "google-genai>=0.8.0",
    "jsonschema>=4.20",
    "anthropic>=0.45.0",
    "openai>=1.0.0",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "minio>=7.2.0",
    "alembic>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
