[project]
name = "seo-article-generator"
version = "0.1.0"
description = "SEO記事自動生成システム"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "google-genai>=0.8.0",
    "jsonschema>=4.20",
    "anthropic>=0.45.0",
    "openai>=1.0.0",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "minio>=7.2.0",
    "alembic>=1.13.0",
    # API Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Temporal Worker
    "temporalio>=1.7.0",
    # LangGraph関連
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "tavily-python>=0.5.0",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.5",
    "lxml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Suppress some strict checks that are overly noisy for this codebase
disable_error_code = ["union-attr", "index", "arg-type", "call-arg", "attr-defined", "unused-ignore", "untyped-decorator"]

[tool.ruff]
target-version = "py311"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N801"]  # Allow class names like Step6_5Output
